--- a/app/app.components.html
+++ b/app/app.components.html
@@ -3,7 +3,7 @@
     <h1>{{ title }}</h1>
 </header>
 <main>
-    <todo-form (add)="create($event)"></todo-form>
+    <todo-form></todo-form>
 
-    <todo-list [todos]="todos"></todo-list>
+    <todo-list></todo-list>
 </main>
